selfhost/test/typechecker/funcdecl_error_return_type_mismatch_stmt.out
Error at %FILE_NAME%:2:3
Return type mismatch for function 'foo'
  |    val x = 123
       ^
Expected Bool
but instead found Unit
